<resources>
    <string name="app_name">Deezal</string>
    <string name="ok">OKAY</string>
    <string name="artists">Artists</string>
    <string name="artist_logo">Artist Logo</string>
    <string name="no_artists_found">No artists found</string>
    <string name="search_hint">Enter any artist name</string>
    <string name="albums">Albums</string>
    <string name="no_albums_found">No Albums Found</string>
    <string name="album_logo">Album Logo</string>
    <string name="back_key_albums">Back key on Albums</string>
    <string name="back_key_tracks">Back key tracks screen</string>
    <string name="no_tracks_found">No tracks found</string>
    <string name="volume_label">Volume %S</string>
</resources>
